Some modifications to the Axios library

--- a/postDetails.html
+++ b/postDetails.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./css/master.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
@@ -173,6 +172,8 @@
         </svg>
     </div>
     <!-- End loading Loder -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
     <script src="./js/main.js" ></script>
     <script src="./js/page_two.js"></script>
 </body>
