--- a/postDetails.html
+++ b/postDetails.html
@@ -18,7 +18,7 @@
         <div class ="container">
             <div class="nav-content">
                 <ul>
-                    <li> <a href="main.html">Ahmed Essa</a></li>
+                    <li> <a href="index.html">Ahmed Essa</a></li>
                     <li> <a href="#">Home</a></li>
                     <li> <a href="profile.html">Profile</a></li>
                 </ul>
