--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,8 @@
         <div class ="container">
             <div class="nav-content">
                 <ul>
-                    <li> <a href="main.html"></a>Ahmed Essa</li>
-                    <li> <a href="main.html">Home</a></li>
+                    <li> <a href="index.html"></a>Ahmed Essa</li>
+                    <li> <a href="index.html">Home</a></li>
                     <li> <a href="#" onclick="profileClicked()">Profile</a></li>
                 </ul>
                 <div class="nav-content" id="nav-content">
