add change to backgroundof website

--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
         <div class ="container">
             <div class="nav-content">
                 <ul>
-                    <li> <a href="index.html"></a>Ahmed Essa</li>
+                    <!-- <li> <a href="index.html"> <img src="./image/3.png" alt="" style="width: 70px; height: 70px; border-radius: 50%;"> </a></li> -->
                     <li> <a href="index.html">Home</a></li>
                     <li> <a href="#" onclick="profileClicked()">Profile</a></li>
                 </ul>
