--- a/postDetails.html
+++ b/postDetails.html
@@ -18,8 +18,8 @@
         <div class ="container">
             <div class="nav-content">
                 <ul>
-                    <li> <a href="index.html">Ahmed Essa</a></li>
-                    <li> <a href="#">Home</a></li>
+                    <li> <a href="index.html"> <img src="./image/3.png" alt="" style="width: 70px; height: 70px; border-radius: 50%;"> </a></li>
+                    <li> <a href="index.html">Home</a></li>
                     <li> <a href="profile.html">Profile</a></li>
                 </ul>
                 <div class="nav-content" id="nav-content">
